Fixed visibility

--- a/public/stylesheets/about.scss
+++ b/public/stylesheets/about.scss
@@ -8,7 +8,7 @@
 }
 
 #about {
-    background-color: rgba(0.0, 0.0, 0.0, 0.4);
+    background-color: rgba(0.0, 0.0, 0.0, 0.5);
     padding-top: 1%;
     padding-left: 1%;
     padding-bottom: 1%;
@@ -25,6 +25,14 @@
         font-size: 1.25rem;
         width: 98%;
         text-align: justify;
+        background-color: rgba(0,0,0,0.5);
+        border-radius: 0.5rem;
+        width: fit-content;
+        padding: 1.25rem;
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+        margin-top: 0;
+        margin-right: 1%;
     }
 
     a {
